Object/objects/Apttus_Config2__PriceListItem__c.object
<CustomObject>
    <fields>
        <fullName>Base_Fee__c</fullName>
        <label>Base Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>CPQ - This field requires for migration</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <label>Level 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Factor__c</fullName>
        <label>Pricing Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>Apttus_Config2__ProductId__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Base_Cost__c</fullName>
        <label>3rd Party Base Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Cost__c</fullName>
        <label>3rd Party % Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Mtnc_Base_Cost__c</fullName>
        <label>3rd Party Mtnc Base Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Mtnc_Cost__c</fullName>
        <label>3rd Party Mtnc % Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Per_User_Cost__c</fullName>
        <label>3rd Party Per User Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Per_User_Mtnc_Cost__c</fullName>
        <label>3rd Party Per User Mtnc Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>